check_bytes_2.txt
    Checking homelab_manager v0.1.0 (/Users/michal/Development/homelab_manager)
error[E0433]: failed to resolve: could not find `MacAddressBytes` in `mac_address`
  --> src/models/types.rs:35:61
   |
35 |         let val = mac_address::MacAddress::new(mac_address::MacAddressBytes::V4(arr));
   |                                                             ^^^^^^^^^^^^^^^
   |                                                             |
   |                                                             could not find `MacAddressBytes` in `mac_address`
   |                                                             help: a struct with a similar name exists: `MacAddress`

warning: unused import: `QuerySelect`
 --> src/db/devices.rs:7:27
  |
7 | use sea_orm::{QueryOrder, QuerySelect};
  |                           ^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused imports: `Alias` and `Expr`
 --> src/db/devices.rs:8:26
  |
8 | use sea_orm::sea_query::{Alias, Expr};
  |                          ^^^^^  ^^^^

warning: unused imports: `networks` and `services`
 --> src/integrations/mod.rs:2:37
  |
2 | use crate::entities::{integrations, services, devices, interfaces, ip_addresses, networks};
  |                                     ^^^^^^^^                                     ^^^^^^^^

warning: unused import: `ModelTrait`
 --> src/integrations/mod.rs:4:77
  |
4 | use sea_orm::{ActiveModelTrait, EntityTrait, Set, ColumnTrait, QueryFilter, ModelTrait, QuerySelect};
  |                                                                             ^^^^^^^^^^

warning: unused import: `ipnetwork::IpNetwork`
 --> src/integrations/mod.rs:5:5
  |
5 | use ipnetwork::IpNetwork;
  |     ^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::str::FromStr`
   --> src/integrations/mod.rs:134:21
    |
134 |                 use std::str::FromStr;
    |                     ^^^^^^^^^^^^^^^^^

warning: unused import: `RuntimeErr`
 --> src/models/types.rs:4:67
  |
4 | use sea_orm::{TryGetable, TryGetError, Value, QueryResult, DbErr, RuntimeErr};
  |                                                                   ^^^^^^^^^^

error[E0308]: mismatched types
  --> src/models/types.rs:25:46
   |
24 |     fn try_get_by<I: sea_orm::ColIdx>(res: &QueryResult, idx: I) -> Result<Self, TryGetError> {
   |                   - found this type parameter
25 |         let bytes: Vec<u8> = res.try_get("", idx).map_err(|e| {
   |                                  -------     ^^^ expected `&str`, found type parameter `I`
   |                                  |
   |                                  arguments to this method are incorrect
   |
   = note:   expected reference `&str`
           found type parameter `I`
note: method defined here
  --> /Users/michal/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/sea-orm-1.1.19/src/executor/query.rs:95:12
   |
95 |     pub fn try_get<T>(&self, pre: &str, col: &str) -> Result<T, DbErr>
   |            ^^^^^^^

warning: unused import: `TryGetable`
 --> src/models/types.rs:4:15
  |
4 | use sea_orm::{TryGetable, TryGetError, Value, QueryResult, DbErr, RuntimeErr};
  |               ^^^^^^^^^^

warning: unused import: `sea_orm::entity::prelude`
 --> src/models/types.rs:3:5
  |
3 | use sea_orm::entity::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `ColumnTrait`
 --> src/integrations/mod.rs:4:51
  |
4 | use sea_orm::{ActiveModelTrait, EntityTrait, Set, ColumnTrait, QueryFilter, ModelTrait, QuerySelect};
  |                                                   ^^^^^^^^^^^

Some errors have detailed explanations: E0308, E0433.
For more information about an error, try `rustc --explain E0308`.
warning: `homelab_manager` (lib) generated 10 warnings
error: could not compile `homelab_manager` (lib) due to 2 previous errors; 10 warnings emitted
